<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <!--Data Viewing Screen Screen-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/WelcomeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/Welcome" />


            <Switch
                android:id="@+id/SMSSwitch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:text="@string/enable_sms_text_messages"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    tools:ignore="UselessParent">


                    <Button
                        android:id="@+id/AddAnimalBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_animal"
                        android:layout_marginEnd="16dp"
                        tools:ignore="ButtonStyle" />


                    <Button
                        android:id="@+id/DeleteAnimalBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/refresh"
                        tools:ignore="ButtonStyle" />
                </TableRow>

            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/AnimalListRV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>